# reflux-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
crates/infst-cli/: Cargo.toml
crates/infst-cli/src/: cli.rs  cli_utils.rs  main.rs
crates/infst-cli/src/commands/: export.rs  launch.rs  mod.rs  navigate.rs  register.rs  sync.rs  tracking.rs  upload.rs
crates/infst-cli/tests/: cli_parsing_tests.rs
crates/infst/src/: lib.rs  retry.rs
crates/infst/tests/: integration_tests.rs  validation_tests.rs
crates/reflux-cli/: Cargo.toml
crates/reflux-cli/src/: main.rs
crates/reflux-cli/src/commands/: find_offsets.rs  scan.rs  status.rs  tracking.rs
crates/reflux-cli/tests/: cli_parsing_tests.rs
crates/reflux-core/: Cargo.toml
crates/reflux-core/src/: error.rs  lib.rs  reflux.rs
crates/reflux-core/src/chart/: chart.rs  difficulty.rs  mod.rs  song.rs  unlock.rs
crates/reflux-core/src/config/: custom_types.rs  mod.rs  version.rs
crates/reflux-core/src/debug/: dump.rs  mod.rs  scan.rs  status.rs
crates/reflux-core/src/export/: console.rs  mod.rs  stream.rs
crates/reflux-core/src/game/: chart.rs  encoding_fixes.rs  enums.rs  mod.rs  play_data.rs  settings.rs  song.rs  state.rs  unlock.rs  version.rs
crates/reflux-core/src/memory/: layout.rs  mod.rs  process.rs  reader.rs
crates/reflux-core/src/network/: api.rs  client.rs  kamaitachi.rs
crates/reflux-core/src/offset/: collection.rs  dump.rs  loader.rs  searcher.rs  signature.rs
crates/reflux-core/src/offset/searcher/: buffer.rs  constants.rs  core.rs  data_map.rs  interactive.rs  legacy.rs  mod.rs  pattern.rs  relative.rs  relative_search.rs  song_list.rs  types.rs  validation.rs
crates/reflux-core/src/offset/searcher/search/: mod.rs  signature.rs
crates/reflux-core/src/offset/searcher/validation/: current_song.rs  data_map.rs  judge.rs  mod.rs  play.rs  song_list.rs  unlock.rs
crates/reflux-core/src/play/: enums.rs  mod.rs  play_data.rs  settings.rs  state.rs
crates/reflux-core/src/process/: bytes.rs  chunked_reader.rs  mock.rs  mod.rs  pattern.rs  process.rs  provider.rs  reader.rs
crates/reflux-core/src/reflux/: game_loop.rs  mod.rs
crates/reflux-core/src/score/: grade.rs  judge.rs  lamp.rs  mod.rs  score_map.rs
crates/reflux-core/src/session/: manager.rs  mod.rs
crates/reflux-core/src/storage/: format.rs  mod.rs  score_map.rs  session.rs  tracker.rs  unlock_db.rs
crates/reflux-core/src/stream/: output.rs
crates/reflux-core/tests/: integration_tests.rs  searcher_tests.rs  song_tests.rs  validation_tests.rs
docs/: offset-detection.md  v0.1.19-memory-structure-changes.md
scripts/normalize/: .gitignore  build-tracker.ts  normalize.ts  package-lock.json  package.json  title-mapping.json  tsconfig.json
web/: package-lock.json  package.json  tsconfig.json  wrangler.toml
web/drizzle/: 0000_bright_jackpot.sql  0000_broken_deadpool.sql  0002_brave_jackal.sql  0003_song_id_lamps.sql
web/drizzle/meta/: 0000_snapshot.json  0002_snapshot.json  _journal.json
web/public/: manifest.webmanifest  sw.js  table-polling.js
web/scripts/: generate-icons.mjs  sync-charts-to-d1.mjs
web/src/: index.ts
web/src/components/: DevicePage.tsx  GuidePage.tsx  LampCell.tsx  Layout.tsx  LoginPage.tsx  RegisterPage.tsx  SettingsPage.tsx  TableView.tsx
web/src/db/: schema.ts
web/src/lib/: chart-table.ts  cleanup.ts  constants.ts  email.ts  lamp.ts  (+4 more)
(+32 files in other folders)
