[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.19"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
encoding_rs = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
urlencoding = "2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
] }
tempfile = "3"
