[package]
name = "infst-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "infst"
path = "src/main.rs"

[dependencies]
infst = { path = "../infst", features = ["debug-tools", "api"] }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
crossterm = "0.28"
serde_json = "1"
encoding_rs = "0.8"
toml = "0.8"
open = "5"
dirs = "6"
ureq = { version = "3", features = ["json"] }
flate2 = "1"
