[package]
name = "reflux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reflux"
path = "src/main.rs"

[dependencies]
reflux-core = { path = "../reflux-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc = "3.4"
crossterm = "0.28"
serde_json = "1"
