[package]
name = "reflux-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
debug-tools = []
legacy-signatures = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
encoding_rs.workspace = true
tracing.workspace = true
chrono.workspace = true
strum.workspace = true
owo-colors = "4"

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
